Fixed text clipping out of projects in certain aspect ratios

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -93,7 +93,7 @@ a {
 
 .card-body {
     padding: 50px;
-    min-width: 300px;
+    min-width: 200px;
     position: relative;
     border: none;
 }
